<resources>
    <string name="app_name">imgur Gallery</string>

    <string name="loading_images_progress_message">Loading images…</string>
    <string name="loading_images_error_message">There was an error loading the images. Make sure you\'re connected to the Internet.</string>
    <string name="try_again_text">Try again</string>

    <string name="hot_section_menu">Hot</string>
    <string name="top_section_menu">Top</string>
    <string name="user_section_menu">User generated</string>

    <string name="hot_section_label">imgur — Hot</string>
    <string name="top_section_label">imgur — Top</string>
    <string name="user_section_label">imgur — User generated</string>

    <string name="gallery_layout_menu">Gallery layout</string>
    <string name="grid_layout">Grid</string>
    <string name="list_layout">List</string>
    <string name="staggered_layout">Staggered</string>
    <string name="show_viral_menu">Show viral</string>

    <string name="gallery_sort_menu">Sort</string>
    <string name="viral_sort">Viral</string>
    <string name="top_sort">Top</string>
    <string name="time_sort">Time</string>
    <string name="rising_sort">Rising</string>

    <string name="gallery_top_window_menu">Window</string>
    <string name="day_top_window">Past day</string>
    <string name="week_top_window">Past week</string>
    <string name="month_top_window">Past month</string>
    <string name="year_top_window">Past year</string>
    <string name="all_top_window">All time</string>

    <string name="gallery_details_label">Gallery details</string>
</resources>