<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/gallery_layout_menu"
        android:icon="@drawable/ic_view_compact"
        app:showAsAction="ifRoom">

        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/layout_grid_item"
                    android:title="@string/grid_layout" />
                <item android:id="@+id/layout_list_item"
                    android:title="@string/list_layout" />
                <item android:id="@+id/layout_staggered_item"
                    android:title="@string/staggered_layout" />
            </group>
        </menu>
    </item>

    <item
        android:title="@string/gallery_sort_menu"
        android:icon="@drawable/ic_sort"
        app:showAsAction="ifRoom">

        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/sort_viral_item"
                    android:title="@string/viral_sort" />
                <item android:id="@+id/sort_top_item"
                    android:title="@string/top_sort" />
                <item android:id="@+id/sort_time_item"
                    android:title="@string/time_sort" />
                <item android:id="@+id/sort_rising_item"
                    android:title="@string/rising_sort" />
            </group>
        </menu>
    </item>
</menu>