<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/hot_section">

    <fragment
        android:id="@+id/hot_section"
        android:name="com.gmail.cristiandeives.imgurgallery.HotGalleryFragment"
        android:label="@string/hot_section_label" />

    <fragment
        android:id="@+id/top_section"
        android:name="com.gmail.cristiandeives.imgurgallery.TopGalleryFragment"
        android:label="@string/top_section_label" />

    <fragment
        android:id="@+id/user_section"
        android:name="com.gmail.cristiandeives.imgurgallery.UserGalleryFragment"
        android:label="@string/user_section_label" />
</navigation>