<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/progress_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/progress_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/loading_images_progress_message"
                style="@style/Theme.ImgurGallery.MessageText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/error_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/error_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_error"
                app:tint="?attr/colorError" />

            <TextView
                android:id="@+id/error_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/loading_images_error_message"
                style="@style/Theme.ImgurGallery.MessageText" />

            <Button
                android:id="@+id/try_again_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:text="@string/try_again_text"
                app:icon="@drawable/ic_refresh"
                app:iconGravity="textStart" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/result_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/large_margin"
            android:clipToPadding="false"
            android:visibility="gone"
            tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:spanCount="2"
            tools:itemCount="10"
            tools:listitem="@layout/gallery_view_holder"
            tools:visibility="visible"/>
    </FrameLayout>
</layout>